# rs-scp

./: Cargo.toml  README.MD  build.rs
.github/workflows/: build.yml
src/: fish.compl  main.rs
